# stellar-confidential-transfer

./: .gitignore  Cargo.toml  Makefile  README.md
client/: Cargo.toml  Makefile
client/src/: cli_json.rs  file_utils.rs  json_converter.rs  key_manager.rs  lib.rs  proof_generator.rs  types.rs
contracts/token/: Cargo.toml  Makefile
contracts/token/benches/: confidential_operations.rs
contracts/token/src/: contract.rs  demo.rs  demo_cli.rs  demo_simple.rs  lib.rs  test.rs  testutil.rs  utils.rs
crypto/: Cargo.toml
crypto/src/: arith.rs  confidential_balance.rs  confidential_proof.rs  encryption.rs  lib.rs  proof.rs  range_proof.rs
docs/: Soroban Confidential Token Design.md  design_doc.md  method.md
