[workspace]
resolver = "2"
members = [
  "client",
  "contracts/token",
  "crypto"
]

[workspace.dependencies]
curve25519-dalek = "4.1.3"
soroban-sdk = "22.0.0"
solana-zk-sdk = "2.3.1"
sha2 = "0.10.9"
bulletproofs = "5.0.0"

[workspace.dev-dependencies]
rand = "0.8.5"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
