[package]
name = "token-client"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-confidential-crypto = { path = "../crypto" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
