[package]
name = "token-client"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]
doctest = false

[[bin]]
name = "conf-token-client"
path = "src/bin/client.rs"

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-confidential-crypto = { path = "../crypto", features = ["testutils"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
curve25519-dalek = "4.1"
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
