[package]
name = "stellar-confidential-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for Stellar confidential transactions"
license = "MIT"
publish = false

[lib]
name = "stellar_confidential_crypto"
crate-type = ["lib"]
doctest = false

[dependencies]
curve25519-dalek = { workspace = true }
soroban-sdk = { workspace = true }
solana-zk-sdk = {workspace = true}
sha2 = {workspace = true}

[dev-dependencies]
rand = "0.8"
sha3 = "0.10.8"