[package]
name = "stellar-confidential-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for Stellar confidential transactions"
license = "MIT"
publish = false

[lib]
name = "stellar_confidential_crypto"
crate-type = ["lib"]
doctest = false

[features]
testutils = ["rand", "sha3"]

[dependencies]
curve25519-dalek = { workspace = true }
soroban-sdk = { workspace = true }
solana-zk-sdk = {workspace = true}
sha2 = {workspace = true}
bulletproofs = {workspace = true}
merlin = {workspace = true}
rand = { version = "0.8", optional = true }
sha3 = { version = "0.10.8", optional = true }

[dev-dependencies]
rand = { version = "0.8"}
sha3 = { version = "0.10.8"}
