[package]
name = "confidential-token"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
required-features = ["demo"]

[features]
demo = ["std", "soroban-sdk/testutils", "stellar-confidential-crypto/testutils", "hex", "curve25519-dalek", "serde", "serde_json"]
std = []

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
stellar-confidential-crypto = { path = "../../crypto" }
hex = { version = "0.4", optional = true }
curve25519-dalek = { version = "4.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-confidential-crypto = { path = "../../crypto", features = ["testutils"]}
