[package]
name = "confidential-token"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[[bin]]
name = "conf-token-demo"
path = "src/bin/demo.rs"
required-features = ["demo"]

[features]
demo = ["std", "testutils", "hex", "curve25519-dalek", "serde", "serde_json", "chrono", "token-client"]
testutils = ["soroban-sdk/testutils", "stellar-confidential-crypto/testutils"]
std = []

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
stellar-confidential-crypto = { path = "../../crypto" }
hex = { version = "0.4", optional = true }
curve25519-dalek = { version = "4.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }
token-client = { path = "../../client", optional = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-confidential-crypto = { path = "../../crypto", features = ["testutils"]}
criterion = "0.5"

[[bench]]
name = "confidential_operations"
harness = false
required-features = ["testutils"]
